Fix gorilla position on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -9,7 +9,7 @@
   width: 100px;
   height: 100px;
   align-self: flex-end;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
   display: block;
   z-index: 1;
 }
